--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "bigi": "^1.4.0",
     "bip66": "^1.1.0",
     "bitcoin-ops": "^1.3.0",
-    "blake2b": "npm:@bitgo/blake2b@3.2.4",
+    "blake2b": "https://github.com/mafintosh/blake2b-wasm.git",
     "bs58check": "^2.0.0",
     "create-hash": "^1.1.0",
     "create-hmac": "^1.1.3",
